# SimpleROSInstallation

./: .dockerignore  .gitignore  Dockerfile.custom  Dockerfile.devtools  Dockerfile.foxglove  Dockerfile.listener  Dockerfile.talker  Dockerfile.unified  README.md  custom_entrypoint.sh  docker-compose.yml
notes/: plan-setup-project-structure-and-base-configuration-files-0.md
ros2_ws/src/custom_nodes/: package.xml  setup.cfg  setup.py
ros2_ws/src/custom_nodes/custom_nodes/: __init__.py  custom_node.py
scripts/: README.md
