<?xml version="1.0"?>
<package format="3">
  <name>custom_nodes</name>
  <version>0.1.0</version>
  <description>Custom ROS2 nodes for monitoring and status reporting</description>
  <maintainer email="manfred.marchl@gmx.at">Manfredo</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
</package>
